<resources>
    <string name="app_name">Update Checker</string>
    <string name="app_name_long">Android Studio Update Checker</string>

    <string name="setting">Setting</string>
    <string name="check_immediately">Check Immediately</string>
    <string name="auto_check">Auto Check</string>
    <string name="interval">Interval</string>
    <string name="about">About</string>
    <string name="license">Open Source License</string>

    <string name="default_interval">21600</string>

    <string name="new_android_studio_version_available">New Android Studio version available</string>
    <string name="new_android_studio">New Android Studio</string>
    <string name="last_check_at">Checked at</string>
    <string name="state_format" formatted="false">%s in %s channel.</string>

</resources>
