<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/setting">

        <Preference android:key="status"/>

        <Preference
            android:key="check_update_immediately"
            android:title="@string/check_immediately"
            />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="auto_check"
            android:title="@string/auto_check"
            />

        <ListPreference
            android:defaultValue="@string/default_interval"
            android:dependency="auto_check"
            android:entries="@array/interval_entries"
            android:entryValues="@array/interval_values_in_seconds"
            android:key="auto_check_interval"
            android:title="@string/interval"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/about">

        <Preference
            android:key="version"
            android:title="@string/app_name_long"
            />

        <Preference
            android:key="license"
            android:title="@string/license"
            />

    </PreferenceCategory>

</PreferenceScreen>